--- a/lineage-server/lineage-server-interfaces/pom.xml
+++ b/lineage-server/lineage-server-interfaces/pom.xml
@@ -46,5 +46,9 @@
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+        </dependency>
     </dependencies>
 </project>
