--- a/lineage-server/lineage-server-start/src/main/resources/application-prod.properties
+++ b/lineage-server/lineage-server-start/src/main/resources/application-prod.properties
@@ -2,9 +2,9 @@ server.port=8194
 
 ## DataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.90.150:3306/lineage?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+spring.datasource.url=jdbc:mysql://localhost:3306/lineage?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
 spring.datasource.username=root
-spring.datasource.password=root@123456
+spring.datasource.password=12345678
 
 ## Servlet
 spring.servlet.multipart.max-file-size=50MB
